feat(smithers-py): expand exports, fix ClaudeNode schema field naming
- Export additional engine components: node identity, task leasing,
  frame storm prevention, render purity, file system context
- Rename ClaudeNode.schema to output_schema to avoid shadowing
  BaseModel.schema attribute (with alias for backward compatibility)
- Update executor and tests to use output_schema parameter

PRD milestones 0-6 fully implemented:
- M0: DB schema, SQLite state, migrations, CLI skeleton ✓
- M1: Node models, JSX runtime ✓
- M2: Tick loop (7-phase render/commit/effects) with batching ✓
- M3: Claude executor with PydanticAI ✓
- M4: While/Ralph loops, Phase/Step progression ✓
- M5: NDJSON logging, event monitoring ✓
- M6: MCP server (stdio + HTTP transports) ✓

--- a/docs/components/smithers-provider.mdx
+++ b/docs/components/smithers-provider.mdx
@@ -60,10 +60,18 @@ For iterative workflows, wrap with `<Ralph>` or `<While>` - see [Ralph](/compone
     executionId={executionId}
     config={{
       defaultModel: "sonnet",
+      maxIterations: 20,  // Default for Ralph/While loops
       verbose: true,
     }}
   >
   ```
+
+  **SmithersConfig properties:**
+  - `defaultModel`: Default model for Claude agents
+  - `maxIterations`: Default max iterations for Ralph/While loops (default: 10). Individual loops can override via `maxIterations` prop.
+  - `globalTimeout`: Global timeout in milliseconds
+  - `verbose`: Enable verbose logging
+  - `extra`: Additional configuration for extensibility
 </ParamField>
 
 <ParamField path="globalTimeout" type="number">
