fix(docs): align CommitResult.filesChanged type with implementation
- docs showed filesChanged: number but impl uses filesChanged: string[]
- string[] is correct design (provides file paths, not just count)
- closed stale issues for OnCIFailure render prop (already implemented)

--- a/docs/components/commit.mdx
+++ b/docs/components/commit.mdx
@@ -30,7 +30,7 @@ description: Create git commits with metadata tracking
 interface CommitResult {
   commitHash: string;
   message: string;
-  filesChanged: number;
+  filesChanged: string[];
   insertions: number;
   deletions: number;
 }
