Add deprecation notice to signalOrchestrationError in Ralph/utils.ts

--- a/docs/api-reference/conventions.mdx
+++ b/docs/api-reference/conventions.mdx
@@ -20,7 +20,7 @@ ISO 8601 strings in SQLite. Some modules map to `Date`:
 
 | `Date` objects | ISO strings |
 |----------------|-------------|
-| `db.execution`, `db.agents`, `db.artifacts`, `db.vcs` | `db.state`, `db.memories`, `db.phases`, `db.steps`, `db.tools`, `db.tasks`, `db.human` |
+| `db.execution`, `db.agents`, `db.artifacts`, `db.vcs` | `db.state`, `db.memories`, `db.phases`, `db.steps`, `db.tasks`, `db.tools`, `db.human` |
 
 ## Status Vocabulary
 
