--- a/docs/concepts/resumability.mdx
+++ b/docs/concepts/resumability.mdx
@@ -232,7 +232,7 @@ Each worktree operates independently, preventing conflicts on restart.
   <Accordion title="Use SMITHERS_EXECUTION_ID for deterministic IDs">
     Set via environment for control plane integration:
     ```bash
-    SMITHERS_EXECUTION_ID=job-123 bun run workflow.tsx
+    SMITHERS_EXECUTION_ID=job-123 smithers workflow.tsx
     ```
     The same ID on restart ensures continuity.
   </Accordion>
