--- a/docs/guides/debugging.mdx
+++ b/docs/guides/debugging.mdx
@@ -26,7 +26,7 @@ Logs stored at `~/.claude/projects/<project-path>/sessions/`:
 
 Correlate with:
 ```tsx
-<Claude onFinished={(r) => console.log("Session:", r.sessionId)}>
+<Claude onFinished={(r) => console.log("Output:", r.output)}>
 ```
 
 ## Common Issues
